# github-ai-app

./: README.md  index.html  package-lock.json  package.json  vite.config.js
.cargo/: config.toml
.github/workflows/: main.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChatArea.vue  ConfigModal.vue  MessageBubble.vue  TabBar.vue  TitleBar.vue  ToolBar.vue
src/stores/: configProfileStore.js  configStore.js  sessionStore.js
src/utils/: api.js  storage.js
